--- a/task_1/src/index.html
+++ b/task_1/src/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-  <meta name="author" content="Egorov Edward">
+  		<meta name="author" content="Egorov Edward">
 		<title>SmartHouse</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/style.css">
@@ -11,22 +11,17 @@
 	</head>
 
 
-	<body>
-	<div class="sign">
+<body>
+	<section>
 		<img src="img/logo.png" alt="logo">
-
-
 	 	<form class="form">
 	 		<input type="text" placeholder="Введите Имя" required>
 	 		<input type="password" placeholder="Введите пароль" required>
 	 		<button class="button"><a href="home.html">Войти</a></button>
-	 	</form>
-	 	<div class="user-help">
-	 		<a href="#">забыли пароль?</a>
-	 		<a href="#">регистрация</a>
-	 	</div>
+		 </form>	 
+	 		<mark><a href="#">забыли пароль?</a></mark>
+	 		<mark><a href="#">регистрация</a></mark>
 
-	</div>
-
+	</section>
 </body>
 </html>
