--- a/task_3/src/index.html
+++ b/task_3/src/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page test</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 
-</head>
+	<head>
+		<meta charset="UTF-8">
+  		<meta name="author" content="Egorov Edward">
+		<title>SmartHouse</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="icon" href="img/logo.png">
+	</head>
+
+
 <body>
-    <input type="checkbox" class="toggle-switch">
+	<main>
+		<img src="img/logo.png" alt="logo">
+	 	<form class="form">
+	 		<input type="text" placeholder="Введите Имя" required>
+	 		<input type="password" placeholder="Введите пароль" required>
+			 <button class="button"><a href="home.html">Войти</a></button> 
+
+			
+			 
+		 </form>	 
+	 		<mark><a href="#">забыли пароль?</a></mark>
+	 		<mark><a href="#">регистрация</a></mark>
+
+		</main>
 </body>
 </html>
